# CMakeTempate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindSPDLOG_EASY.cmake  common.cmake  map.cmake
src/: a.cpp  a.h  main.cpp
src/b/: b.h
src/c/: c.h  d.h
src/c/e/: e.h  f.h
